--- a/dashboard/dokter.html
+++ b/dashboard/dokter.html
@@ -14,7 +14,7 @@
     <!-- Navbar untuk Mobile -->
     <nav class="bg-teal-700 text-white p-4 fixed top-0 left-0 right-0 z-50 md:hidden">
         <div class="flex justify-between items-center">
-            <h2 class="text-xl font-bold">Welcome Admin</h2>
+            <h2 class="text-xl font-bold">Welcome Back Admin</h2>
             <div class="flex items-center gap-4">
                 <img class="w-10 h-10 rounded-full" src="../img/puskesmas.png" alt="">
                 <div class="font-medium dark:text-white">
