--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition">
                     <img src="img/sayyed.jpg" alt="Sayed Muhammad Qadri" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="font-bold text-xl mb-2">Sayed Muhammad Qadri S.Kom S.Ked</h3>
+                        <h3 class="font-bold text-xl mb-2">Dr. Sayed Muhammad Qadri S.Kom S.Ked</h3>
                         <p class="text-teal-500 font-semibold mb-4">Dokter Gigi</p>
                         <p class="text-gray-600 text-sm">
                             "Menjadi dokter gigi adalah tentang melayani, menyembuhkan, dan membawa kembali kepercayaan
@@ -267,7 +267,7 @@
 
                 <!-- Doctor 2 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition">
-                    <img src="img/rizza.jpg" alt="Dr. Riza alfira"
+                    <img src="img/zaa.jpg" alt="Dr. Riza alfira"
                         class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Dr. Riza alfira S.Ked</h3>
@@ -288,13 +288,13 @@
                                 </svg>
                             </a>
                             <!-- GitHub -->
-                            <a href="https://www.github.com" target="_blank" aria-label="GitHub">
+                            <a href="https://github.com/rizalfiraa" target="_blank" aria-label="GitHub">
                                 <svg class="h-5 w-5 text-black hover:text-teal-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
                                 </svg>
                             </a>
                             <!-- LinkedIn -->
-                            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+                            <a href="https://id.linkedin.com/in/riiza-alfiraa-78b45233b" target="_blank" aria-label="LinkedIn">
                                 <svg class="h-5 w-5 text-black hover:text-teal-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                                     <rect x="2" y="9" width="4" height="12" />
@@ -309,10 +309,10 @@
 
                 <!-- Doctor 3 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition">
-                    <img src="img/linda.jpg" alt="Dr.Linda Agistina"
+                    <img src="img/nda.jpg" alt="Dr.Linda Agistina"
                         class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="font-bold text-xl mb-2">Dr.Linda Agistina S.Ked</h3>
+                        <h3 class="font-bold text-xl mb-2">Dr. Linda Agistina S.Ked</h3>
                         <p class="text-teal-500 font-semibold mb-4">Dokter Keluarga Berencana</p>
                         <p class="text-gray-600 text-sm">
                             "Setiap kerutan di wajah mereka menyimpan cerita. Sebagai dokter lansia, saya merasa
@@ -330,13 +330,13 @@
                                 </svg>
                             </a>
                             <!-- GitHub -->
-                            <a href="https://www.github.com" target="_blank" aria-label="GitHub">
+                            <a href="https://github.com/Lindaagstna" target="_blank" aria-label="GitHub">
                                 <svg class="h-5 w-5 text-black hover:text-teal-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
                                 </svg>
                             </a>
                             <!-- LinkedIn -->
-                            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/me?trk=p_mwlite_feed-secondary_nav" target="_blank" aria-label="LinkedIn">
                                 <svg class="h-5 w-5 text-black hover:text-teal-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                                     <rect x="2" y="9" width="4" height="12" />
@@ -351,10 +351,10 @@
 
                 <!-- Doctor 4 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition">
-                    <img src="img/ecan.jpg" alt="Dr. Rama Aditia"
+                    <img src="img/rama.jpg" alt="Dr. Rama Aditia"
                         class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="font-bold text-xl mb-2">Dr. Haechan S.Ked</h3>
+                        <h3 class="font-bold text-xl mb-2">Dr. Rama Aditia S.Ked</h3>
                         <p class="text-teal-500 font-semibold mb-4">Dokter Anak & Ibu</p>
                         <p class="text-gray-600 text-sm">
                             "Kesehatan dimulai dari apa yang kita makan. Sebagai dokter gizi, misi saya adalah
@@ -371,13 +371,13 @@
                                 </svg>
                             </a>
                             <!-- GitHub -->
-                            <a href="https://www.github.com" target="_blank" aria-label="GitHub">
+                            <a href="https://github.com/Ramaaditia123" target="_blank" aria-label="GitHub">
                                 <svg class="h-5 w-5 text-black hover:text-teal-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
                                 </svg>
                             </a>
                             <!-- LinkedIn -->
-                            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/in/rama-aditia-42299a336/?trk=contact-info" target="_blank" aria-label="LinkedIn">
                                 <svg class="h-5 w-5 text-black hover:text-teal-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                                     <rect x="2" y="9" width="4" height="12" />
@@ -385,8 +385,6 @@
                                 </svg>
                             </a>
                         </div>
-                        
-                        
                     </div>
                 </div>
             </div>
